# multiscreen

./: README.md  pyproject.toml  train.py
multiscreen/: __init__.py  multiscreen.py
tests/: test_multiscreen.py
